bug/RCT-142-FalsePositive fix the logic for how -13019 is calculated